--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.0",
+    "joi": "^17.9.1",
     "nanoid": "^3.1.23"
   },
   "devDependencies": {
