--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "prod": "NODE_ENV=production node ./src/server.js",
     "dev": "nodemon ./src/server.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "migrate": "node-pg-migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.0",
+    "dotenv": "^16.0.3",
     "joi": "^17.9.1",
-    "nanoid": "^3.1.23"
+    "nanoid": "^3.1.23",
+    "node-pg-migrate": "^6.2.2",
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "eslint": "^8.35.0",
