--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.3.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "joi": "^17.9.1",
     "nanoid": "^3.1.23",
